<resources>
    <string name="app_name" translatable="false">Yamba</string>
    <string name="status_activity_title">Update Status</string>
    <string name="status_activity_button">Update</string>
    <string name="status_activity_hint">Please enter your status update</string>
    <string name="start_service">Start service</string>
    <string name="stop_service">Stop service</string>
    <string name="refresh_service">Refresh timeline</string>
    <string name="preferences">Preferences</string>
    <string name="username_summary">Enter username</string>
    <string name="password_summary">Enter password</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="server">Enter server API address</string>
    <string name="delay">Delay</string>
    <string name="delay_summary">How frequent to check for updates</string>
    <string name="timeline">Timeline</string>
    <string name="status_update">Update status</string>
    <string-array name="delayNames">
        <item>Every fifteen minutes</item>
        <item>Every half hour</item>
        <item>Every hour</item>
        <item>Every half day</item>
        <item>Once a day</item>
        <item>Never</item>
    </string-array>
    <string-array name="delayValues">
        <item>900000</item>
        <item>1800000</item>
        <item>3600000</item>
        <item>43200000</item>
        <item>86400000</item>
        <item>0</item>
    </string-array>
</resources>
