<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:key="username"
        android:summary="@string/username_summary"
        android:title="@string/username" />

    <EditTextPreference
        android:key="password"
        android:summary="@string/password_summary"
        android:title="@string/password"
        android:password="true"/>

    <EditTextPreference
        android:key="server"
        android:title="@string/server" />

    <ListPreference
        android:key="delay"
        android:title="@string/delay"
        android:summary="@string/delay_summary"
        android:inputType="number"
        android:entries="@array/delayNames"
        android:entryValues="@array/delayValues"/>
</PreferenceScreen>